feat: give/set on held item, amount cap, id validation, English messages