@@ -19,6 +19,8 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 public final class XSkillCommand implements CommandExecutor, TabCompleter {
+    private static final int GIVE_MAX_AMOUNT = 1024;
+
     private final XSkillPlugin plugin;
 
     public XSkillCommand(XSkillPlugin plugin) {
@@ -28,7 +30,9 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (args.length == 0) {
-            sender.sendMessage(Text.color("&7/xskill give <player> <swordId> [amount]"));
+            sender.sendMessage(Text.color("&7/xskill give <id> &8- &7apply full definition to held item (any item)"));
+            sender.sendMessage(Text.color("&7/xskill set <id> &8- &7set definition ID only on held item"));
+            sender.sendMessage(Text.color("&7/xskill give <player> <id> [amount]"));
             sender.sendMessage(Text.color("&7/xskill reload"));
             sender.sendMessage(Text.color("&7/xskill stats [player]"));
             sender.sendMessage(Text.color("&7/xskill level [player]"));
@@ -39,10 +43,11 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
         return switch (sub) {
             case "reload" -> reload(sender);
             case "give" -> give(sender, args);
+            case "set" -> set(sender, args);
             case "stats" -> stats(sender, args);
             case "level" -> level(sender, args);
             default -> {
-                sender.sendMessage(Text.color("&cBilinmeyen komut."));
+                sender.sendMessage(Text.color("&cUnknown command."));
                 yield true;
             }
         };
@@ -50,38 +55,70 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
 
     private boolean reload(CommandSender sender) {
         if (!sender.hasPermission("xskill.reload") && !sender.hasPermission("xskill.admin")) {
-            sender.sendMessage(Text.color("&cYetkin yok."));
+            sender.sendMessage(Text.color("&cNo permission."));
             return true;
         }
         plugin.swords().reload();
-        sender.sendMessage(Text.color("&aYenilendi."));
+        sender.sendMessage(Text.color("&aReloaded."));
         return true;
     }
 
     private boolean give(CommandSender sender, String[] args) {
         if (!sender.hasPermission("xskill.give") && !sender.hasPermission("xskill.admin")) {
-            sender.sendMessage(Text.color("&cYetkin yok."));
+            sender.sendMessage(Text.color("&cNo permission."));
+            return true;
+        }
+        if (args.length == 2) {
+            if (!(sender instanceof Player p)) {
+                sender.sendMessage(Text.color("&cConsole: /xskill give <player> <id> [amount]"));
+                return true;
+            }
+            String swordId = args[1];
+            if (swordId.isBlank()) {
+                sender.sendMessage(Text.color("&cInvalid id."));
+                return true;
+            }
+            SwordDefinition def = plugin.swords().get(swordId);
+            if (def == null || !def.enabled()) {
+                sender.sendMessage(Text.color("&cUnknown or disabled definition."));
+                return true;
+            }
+            var hand = p.getInventory().getItemInMainHand();
+            if (hand.getType().isAir()) {
+                sender.sendMessage(Text.color("&cHold any item in your main hand."));
+                return true;
+            }
+            if (!SwordItems.applyFull(hand, def)) {
+                sender.sendMessage(Text.color("&cCould not apply to item."));
+                return true;
+            }
+            sender.sendMessage(Text.color("&aApplied definition &f" + swordId + " &ato your held item."));
             return true;
         }
         if (args.length < 3) {
-            sender.sendMessage(Text.color("&cKullanım: /xskill give <player> <swordId> [amount]"));
+            sender.sendMessage(Text.color("&cUsage: /xskill give <id> &8| &7/xskill give <player> <id> [amount]"));
             return true;
         }
         Player target = Bukkit.getPlayerExact(args[1]);
         if (target == null) {
-            sender.sendMessage(Text.color("&cOyuncu bulunamadı."));
+            sender.sendMessage(Text.color("&cPlayer not found."));
             return true;
         }
         String swordId = args[2];
+        if (swordId.isBlank()) {
+            sender.sendMessage(Text.color("&cInvalid id."));
+            return true;
+        }
         SwordDefinition def = plugin.swords().get(swordId);
         if (def == null || !def.enabled()) {
-            sender.sendMessage(Text.color("&cKılıç bulunamadı/kapalı."));
+            sender.sendMessage(Text.color("&cUnknown or disabled definition."));
             return true;
         }
         int amount = 1;
         if (args.length >= 4) {
             try {
-                amount = Math.max(1, Integer.parseInt(args[3]));
+                long parsed = Long.parseLong(args[3]);
+                amount = (int) Math.min(GIVE_MAX_AMOUNT, Math.max(1L, parsed));
             } catch (Exception ignored) {
                 amount = 1;
             }
@@ -91,7 +128,43 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
             item.setAmount(1);
             target.getInventory().addItem(item);
         }
-        sender.sendMessage(Text.color("&aVerildi: &f" + swordId + " &7x" + amount));
+        sender.sendMessage(Text.color("&aGiven: &f" + swordId + " &7x" + amount));
+        return true;
+    }
+
+    private boolean set(CommandSender sender, String[] args) {
+        if (!sender.hasPermission("xskill.set") && !sender.hasPermission("xskill.admin")) {
+            sender.sendMessage(Text.color("&cNo permission."));
+            return true;
+        }
+        if (!(sender instanceof Player p)) {
+            sender.sendMessage(Text.color("&cPlayers only."));
+            return true;
+        }
+        if (args.length < 2) {
+            sender.sendMessage(Text.color("&cUsage: /xskill set <id>"));
+            return true;
+        }
+        String swordId = args[1];
+        if (swordId.isBlank()) {
+            sender.sendMessage(Text.color("&cInvalid id."));
+            return true;
+        }
+        SwordDefinition def = plugin.swords().get(swordId);
+        if (def == null || !def.enabled()) {
+            sender.sendMessage(Text.color("&cUnknown or disabled definition."));
+            return true;
+        }
+        var hand = p.getInventory().getItemInMainHand();
+        if (hand.getType().isAir()) {
+            sender.sendMessage(Text.color("&cHold any item in your main hand."));
+            return true;
+        }
+        if (!SwordItems.applySwordIdOnly(hand, def)) {
+            sender.sendMessage(Text.color("&cCould not set ID on item."));
+            return true;
+        }
+        sender.sendMessage(Text.color("&7Definition ID set on held item: &f" + swordId));
         return true;
     }
 
@@ -99,17 +172,17 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
         Player target;
         if (args.length >= 2) {
             if (!sender.hasPermission("xskill.stats.others") && !sender.hasPermission("xskill.admin")) {
-                sender.sendMessage(Text.color("&cYetkin yok."));
+                sender.sendMessage(Text.color("&cNo permission."));
                 return true;
             }
             target = Bukkit.getPlayerExact(args[1]);
             if (target == null) {
-                sender.sendMessage(Text.color("&cOyuncu bulunamadı."));
+                sender.sendMessage(Text.color("&cPlayer not found."));
                 return true;
             }
         } else {
             if (!(sender instanceof Player p)) {
-                sender.sendMessage(Text.color("&cKonsol için: /xskill stats <player>"));
+                sender.sendMessage(Text.color("&cConsole: /xskill stats <player>"));
                 return true;
             }
             target = p;
@@ -119,12 +192,12 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
         double into = plugin.levels().xpIntoLevel(target);
         double toNext = plugin.levels().xpToNext(target);
         sender.sendMessage(Text.color("&6xSkill &7- &f" + target.getName()));
-        sender.sendMessage(Text.color("&7Seviye: &a" + level));
-        sender.sendMessage(Text.color("&7Toplam XP: &b" + String.format(Locale.ROOT, "%.2f", xp)));
+        sender.sendMessage(Text.color("&7Level: &a" + level));
+        sender.sendMessage(Text.color("&7Total XP: &b" + String.format(Locale.ROOT, "%.2f", xp)));
         if (toNext > 0) {
-            sender.sendMessage(Text.color("&7Seviye içi XP: &b" + String.format(Locale.ROOT, "%.2f", into) + "&7/&b" + String.format(Locale.ROOT, "%.2f", toNext)));
+            sender.sendMessage(Text.color("&7XP this level: &b" + String.format(Locale.ROOT, "%.2f", into) + "&7/&b" + String.format(Locale.ROOT, "%.2f", toNext)));
         } else {
-            sender.sendMessage(Text.color("&7Maks seviye."));
+            sender.sendMessage(Text.color("&7Max level."));
         }
         return true;
     }
@@ -137,10 +210,23 @@ public final class XSkillCommand implements CommandExecutor, TabCompleter {
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         if (args.length == 1) {
-            return filter(Arrays.asList("give", "reload", "stats", "level"), args[0]);
+            return filter(Arrays.asList("give", "set", "reload", "stats", "level"), args[0]);
         }
         if (args.length == 2 && args[0].equalsIgnoreCase("give")) {
-            return filter(Bukkit.getOnlinePlayers().stream().map(Player::getName).toList(), args[1]);
+            var swords = plugin.swords().all().entrySet().stream()
+                    .filter(e -> e.getValue() != null && e.getValue().enabled())
+                    .map(Map.Entry::getKey)
+                    .collect(Collectors.toList());
+            var players = Bukkit.getOnlinePlayers().stream().map(Player::getName).toList();
+            List<String> merged = new ArrayList<>(swords);
+            merged.addAll(players);
+            return filter(merged, args[1]);
+        }
+        if (args.length == 2 && args[0].equalsIgnoreCase("set")) {
+            return filter(plugin.swords().all().entrySet().stream()
+                    .filter(e -> e.getValue() != null && e.getValue().enabled())
+                    .map(Map.Entry::getKey)
+                    .collect(Collectors.toList()), args[1]);
         }
         if (args.length == 3 && args[0].equalsIgnoreCase("give")) {
             return filter(plugin.swords().all().entrySet().stream()
